// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardActions mounts and matches snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  padding: 8px;
  color: rgba(0,0,0,0.87);
}

.c0 button {
  margin: 0 8px 0 0;
}

<ActionsComponent
  className="c0"
>
  <div>
    child 1
  </div>
  <div>
    child 2
  </div>
</ActionsComponent>
`;

exports[`CardActions mounts and matches snapshot vertical 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  padding: 8px;
  color: rgba(0,0,0,0.87);
  -webkit-flex-flow: column;
  -ms-flex-flow: column;
  flex-flow: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c0 button {
  margin: 0 8px 0 0;
}

.c0 button {
  margin: 0 0 4px;
}

.c0 button:last-child {
  margin-bottom: 0;
}

<ActionsComponent
  className="c0"
  vertical={true}
>
  <div>
    child 1
  </div>
  <div>
    child 2
  </div>
</ActionsComponent>
`;
